Cannot double-click to open newly created folder.
- Open Files.
- Open (who knows what it's called, the top-right is overcrowded with icons) the 3 dashes menu.
- Click the icon that has hover text of "New Folder".
- Type in a name and hit Enter.
- Immediately double-click on newly created, highlighted folder.
- The "white outline" disappears (which looks ugly, since the entire row is highlighted but this outline is only around the text) and the folder does not open.
- Double-click the folder again and it will open.