list-view: Fix double-click row check for gesture

Before porting to a GtkMultiPressGesture [1], for every double click,
we would get 2 events of type GDK_BUTTON_PRESS for each click and 1
event of type GDK_2BUTTON_PRESS after the second click [2]:

    1st click: GDK_BUTTON_PRESS
    2nd click: GDK_BUTTON_PRESS, followed by GDK_2BUTTON_PRESS

So, in order to ensure the double click happened within the same list
row, we used to save the clicked path for each GDK_BUTTON_PRESS event
and compare the last two saved paths during the GDK_2BUTTON_PRESS one.

However, now we only get a GtkMultiPressGEsture::pressed signal twice:

    1st click: ::pressed is emited with n_press = 1
    2st click: ::pressed is emited with n_press = 2

Yet, we are still saving the clicked path only when n_press = 1, so,
unless the user had already clicked this row before doing a double
click, the saved paths don't match and we ignore the double click.

Instead, it's enough to save the row path for the 1st click, as we
can compare it directly with row path on the 2nd click.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1599

[1] 13a8d3efacbe160d2cc9158ec707ab99013d7f87
[2] https://developer.gnome.org/gdk3/stable/gdk3-Events.html#GDK-2BUTTON-PRESS:CAPS